# rusttracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bounds.rs  camera.rs  image.rs  intersection.rs  main.rs  material.rs  math.rs  ray.rs  scene.rs
