[package]
name = "rust_tracer"
version = "0.1.0"
authors = ["Markus Broecker <mbrckr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
scoped_threadpool = "0.1.9"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]